--- a/app/assets/stylesheets/screen/screen.css.scss
+++ b/app/assets/stylesheets/screen/screen.css.scss
@@ -9,6 +9,7 @@ body {
   color: white;
   text-align: right;
   padding-right: 5px;
+  margin-top: 2px;
   
   a, form.button_to input { 
     color: white; 
